# Coursework_7

./: README.md  catalog.json  category.json  product.json  pyproject.toml  requirements.txt
catalog/: admin.py  models.py  urls.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_price.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
